--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingBottom="12dp"
-    android:paddingTop="12dp">
+    android:paddingTop="12dp"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/shape_rectangle_white">
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -15,9 +16,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.5" />
 
-
-
-
     <TextView
         android:id="@+id/tv_deviceName"
         android:layout_width="wrap_content"
@@ -25,7 +23,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:text="DEVICE NAME"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="parent" />
 
