--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -3,9 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingBottom="12dp"
-    android:paddingTop="12dp"
+    android:layout_height="@dimen/adapter_item_height"
+
     android:layout_marginBottom="8dp"
     android:background="@drawable/shape_rectangle_white">
 
