--- a/app/src/main/res/layout/activity_devices_list.xml
+++ b/app/src/main/res/layout/activity_devices_list.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/adapter_item_width"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingBottom="12dp"
