--- a/app/src/main/res/layout/device_details_display.xml
+++ b/app/src/main/res/layout/device_details_display.xml
@@ -1,6 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/device_details_info"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/devices_detail_vertical_padding"
+        android:paddingEnd="@dimen/devices_detail_horizontal_padding"
+        android:paddingLeft="@dimen/devices_detail_horizontal_padding"
+        android:paddingRight="@dimen/devices_detail_horizontal_padding"
+        android:paddingStart="@dimen/devices_detail_horizontal_padding"
+        android:paddingTop="@dimen/devices_detail_vertical_padding">
+
+        <android.support.constraint.Guideline
+            android:id="@+id/horizontal_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5"/>
+
+        <!-- device name -->
+    <TextView
+        android:id="@+id/device_name_label"
+        style="@style/DetailLabel"
+        android:layout_marginTop="@dimen/devices_detail_horizontal_padding"
+        android:text="@string/device_name_label"
+        app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
+        app:layout_constraintTop_toTopOf="@+id/device_details_info"
+        app:layout_constraintVertical_bias="0.5"/>
+
+        <TextView
+            android:id="@+id/device_details_text_name"
+            style="@style/DeviceDetails"
+            app:layout_constraintBottom_toBottomOf="@+id/device_name_label"
+            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+            tools:text="dev name"/>
+
+
+    <TextView
+        android:id="@+id/device_type_label"
+        style="@style/DetailLabel"
+        android:layout_marginTop="@dimen/devices_detail_horizontal_padding"
+        android:text="@string/device_type_label"
+        app:layout_constraintBottom_toBottomOf="@+id/device_details_info"
+        app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
+        app:layout_constraintTop_toBottomOf="@+id/device_name_label"
+        app:layout_constraintVertical_bias="0.5"/>
+
+        <TextView
+            android:id="@+id/device_details_text_type"
+            style="@style/DeviceDetails"
+            app:layout_constraintBottom_toBottomOf="@+id/device_type_label"
+            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+            tools:text="dev type"/>
+
+    </android.support.constraint.ConstraintLayout>
