--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -4,8 +4,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="@dimen/adapter_item_width"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     android:paddingBottom="@dimen/devices_detail_vertical_padding"
     android:paddingEnd="@dimen/fibaro_medium_padding"
     android:paddingLeft="@dimen/fibaro_medium_padding"
