--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/adapter_item_width"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     android:background="@color/gray_marker"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:paddingBottom="12dp"
