--- a/app/src/main/res/layout-land/activity_device_details.xml
+++ b/app/src/main/res/layout-land/activity_device_details.xml
@@ -3,9 +3,15 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/adapter_item_width"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:background="@color/gray_marker"
+        android:paddingBottom="12dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="12dp">
 
         <include
             android:id="@+id/device_details_display_info"
