--- a/app/src/main/res/layout/device_details_display.xml
+++ b/app/src/main/res/layout/device_details_display.xml
@@ -16,45 +16,53 @@
         android:paddingTop="@dimen/devices_detail_vertical_padding">
 
         <android.support.constraint.Guideline
-            android:id="@+id/horizontal_middle"
+            android:id="@+id/vertical_middle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5"/>
 
-        <!-- device name -->
-    <TextView
-        android:id="@+id/device_name_label"
-        style="@style/DetailLabel"
-        android:layout_marginTop="@dimen/devices_detail_horizontal_padding"
-        android:text="@string/device_name_label"
-        app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
-        app:layout_constraintTop_toTopOf="@+id/device_details_info"
-        app:layout_constraintVertical_bias="0.5"/>
+        <android.support.constraint.Guideline
+            android:id="@+id/horizontal_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.5"/>
+
+            <!-- device name -->
+        <TextView
+            android:id="@+id/device_name_label"
+            style="@style/DetailLabel"
+            android:layout_marginTop="@dimen/fibaro_medium_padding"
+            android:text="@string/device_name_label"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_middle"
+            app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.33" />
 
         <TextView
             android:id="@+id/device_details_text_name"
             style="@style/DeviceDetails"
             app:layout_constraintBottom_toBottomOf="@+id/device_name_label"
-            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+            app:layout_constraintLeft_toLeftOf="@+id/vertical_middle"
             tools:text="dev name"/>
 
 
-    <TextView
-        android:id="@+id/device_type_label"
-        style="@style/DetailLabel"
-        android:layout_marginTop="@dimen/devices_detail_horizontal_padding"
-        android:text="@string/device_type_label"
-        app:layout_constraintBottom_toBottomOf="@+id/device_details_info"
-        app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
-        app:layout_constraintTop_toBottomOf="@+id/device_name_label"
-        app:layout_constraintVertical_bias="0.5"/>
+        <TextView
+            android:id="@+id/device_type_label"
+            style="@style/DetailLabel"
+            android:layout_marginBottom="@dimen/fibaro_medium_padding"
+
+            android:text="@string/device_type_label"
+            app:layout_constraintBottom_toBottomOf="@+id/device_details_info"
+            app:layout_constraintLeft_toLeftOf="@+id/device_details_info"
+            app:layout_constraintTop_toTopOf="@+id/horizontal_middle" />
 
         <TextView
             android:id="@+id/device_details_text_type"
             style="@style/DeviceDetails"
             app:layout_constraintBottom_toBottomOf="@+id/device_type_label"
-            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
+            app:layout_constraintLeft_toLeftOf="@+id/vertical_middle"
             tools:text="dev type"/>
 
     </android.support.constraint.ConstraintLayout>
