update device details layuout

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/adapter_item_width"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:background="@color/gray_marker"
@@ -33,7 +33,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_medium_padding"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:text="title"
@@ -45,7 +44,6 @@
             android:id="@+id/info_text_serialNumber_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_medium_padding"
             style="@style/DetailLabel"
             android:text="serial No"
@@ -56,7 +54,6 @@
             android:id="@+id/info_text_mac_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_small_padding"
             style="@style/DetailLabel"
             android:text="MAC"
@@ -67,7 +64,6 @@
             android:id="@+id/info_text_softVersion_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_small_padding"
             style="@style/DetailLabel"
             android:text="software ver"
@@ -78,7 +74,6 @@
             android:id="@+id/info_text_beta_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_small_padding"
             style="@style/DetailLabel"
             android:text="beta"
@@ -89,7 +84,6 @@
             android:id="@+id/info_text_zwaveVer_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_small_padding"
             style="@style/DetailLabel"
             android:text="zwaveVersion"
@@ -100,7 +94,6 @@
             android:id="@+id/info_text_serverStatus_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/fibaro_small_padding"
             android:layout_marginTop="@dimen/fibaro_small_padding"
             style="@style/DetailLabel"
             android:text="serverStatus"
