--- a/app/src/main/res/layout/activity_device_details.xml
+++ b/app/src/main/res/layout/activity_device_details.xml
@@ -8,10 +8,12 @@
         android:layout_gravity="center_horizontal"
         android:orientation="vertical"
 
-        android:paddingBottom="12dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="12dp">
+        android:paddingBottom="@dimen/devices_detail_vertical_padding"
+        android:paddingEnd="@dimen/devices_detail_horizontal_padding"
+        android:paddingLeft="@dimen/devices_detail_horizontal_padding"
+        android:paddingRight="@dimen/devices_detail_horizontal_padding"
+        android:paddingStart="@dimen/devices_detail_horizontal_padding"
+        android:paddingTop="@dimen/devices_detail_vertical_padding">
 
         <include
             android:id="@+id/device_details_display_info"
