--- a/app/src/main/res/layout/device_details_settings.xml
+++ b/app/src/main/res/layout/device_details_settings.xml
@@ -4,7 +4,6 @@
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/device_details_settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,9 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"
-            tools:layout_editor_absoluteX="192dp"
-            tools:layout_editor_absoluteY="0dp"/>
+            app:layout_constraintGuide_percent="0.5"/>
 
         <TextView
             android:id="@+id/device_details_settings_title"
@@ -24,8 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/fibaro_medium_padding"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:layout_marginTop="@dimen/fibaro_mini_padding"
+            style="@style/DeviceDetails"
             android:text="Set a new value"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
