implement fragments and remove activities

--- a/app/src/main/res/layout/activity_devices_list.xml
+++ b/app/src/main/res/layout/activity_devices_list.xml
@@ -14,7 +14,7 @@
     android:paddingRight="16dp"
     android:paddingTop="12dp"
     android:background="@color/gray_marker"
-    tools:context=".DevicesListActivity">
+    tools:context=".FragmentDeviceList">
 
 
     <LinearLayout
