--- a/app/src/main/res/layout/activity_device_details.xml
+++ b/app/src/main/res/layout/activity_device_details.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical"
+        android:background="@color/gray_marker"
 
         android:paddingBottom="@dimen/devices_detail_vertical_padding"
         android:paddingEnd="@dimen/devices_detail_horizontal_padding"
