--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ie.droidfactory.fibarodemoapp.MainActivity">
+    tools:context="ie.droidfactory.fibarodemoapp.FragmentLogin">
 
     <TextView
         android:id="@+id/text_main_info"
